--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,6 @@
 <div class="pb-8">
-  <h3 class="text-center text-1xl font-bold pb-5">Skills</h3>
-  <div class="flex justify-center gap-40 ">
-    <p class="inline-block px-2 py-1 rounded-md bg-gray-100" *ngFor="let skill of skills">{{ skill }}</p>
+  <h3 class="text-center text-4xl font-bold pb-6">Skills</h3>
+  <div class="flex justify-center">
+    <p class="inline-block m-2 px-2 py-1 rounded-md bg-gray-100" *ngFor="let skill of skills">{{ skill }}</p>
   </div>
 </div>
