--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,19 +1,17 @@
-<div>
-  <div class="pb-5">
-    <div class="flex">
-      <h3 class="text-2xl">{{workExperience.title}}</h3>
-    </div>
-    <h3 class="text-1xl pb-2.5">{{workExperience.company}}</h3>
-    <div class="pb-2">
-      <p *ngIf="!isPresent()">{{ workExperience.startDate | date }} - {{ workExperience.endDate | date }}</p>
-      <ng-template [ngIf]="isPresent()">
-        <p>{{ workExperience.startDate | date }} - Present</p>
-      </ng-template>
-    </div>
-    <ul class="list-disc">
-        <li *ngFor="let highlight of workExperience.highLights">
-          {{highlight}}
-        </li>
-    </ul>
+<div class="mb-7">
+  <div class="font-medium">
+    <h3 class="text-2xl">{{ workExperience.title }}</h3>
   </div>
+  <h3 class="text-1xl pb-2.5">{{ workExperience.company }}</h3>
+  <div class="pb-2">
+    <p *ngIf="!isPresent()">{{ workExperience.startDate | date }} - {{ workExperience.endDate | date }}</p>
+    <ng-template [ngIf]="isPresent()">
+      <p>{{ workExperience.startDate | date }} - Present</p>
+    </ng-template>
+  </div>
+  <ul class="list-disc">
+    <li *ngFor="let highlight of workExperience.highLights">
+      {{ highlight }}
+    </li>
+  </ul>
 </div>
