--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,3 @@
-<div class="pt-8 px-8 text-center">
-  <h1 class="text-4xl font-bold pb-2">Giao Truong</h1>
-  <div class="flex gap-8 justify-center pb-8">
-    <p>gtruong3000@gmail.com</p>
-    <p>/</p>
-    <p>336-899-5501</p>
-    <p>/</p>
-    <p>Gastonia, NC</p>
-  </div>
+<div class="pt-8 px-8 mb-8 md:mb-16 text-center">
+  <h1 class="text-6xl font-bold">Giao Truong</h1>
 </div>
