--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="min-h-screen bg-gray-200">
   <div class="p-8 lg:mx-auto lg:max-w-5xl">
-    <header></header>
+    <header [bio] = "bioData"></header>
     <div class="ResumeContent flex flex-col lg:flex-row lg:space-x-16">
       <div class="ResumeLeft lg:w-3/5">
         <resume-summary></resume-summary>
