--- a/src/app/resume-summary/resume-summary.component.html
+++ b/src/app/resume-summary/resume-summary.component.html
@@ -1,11 +1,12 @@
 <div class="pb-8">
   <h3 class="text-center text-4xl font-bold pb-6">Summary</h3>
   <div class="text-left md:container md:mx-auto">
-    <p>
-      Graduated in 2016 from Appalchian State University with a 
-      BS in Computer Science. Spent the last five years in various 
-      teams at Vanguard working on REST services using Java and frontend 
-      projects using Angular.   
+    <p class="pb-3">
+      Graduated in 2016 from Appalachian State University with a 
+      BS degree in Computer Science. My most recent experience at 
+      Vanguard as a senior developer focused on building Java micro services 
+      for the Enterprise Advise. Outside of work, I enjoy hiking, camping and photography.
     </p>
+    <p>I am currently located in the Charlotte, North Carolina.</p>
   </div>
 </div>
