--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,7 @@
 <div class="pb-8">
   <h3 class="text-center text-4xl font-bold pb-5">Contact</h3>
-  <div>
+  <div class="flex flex-row items-center text-lg">
+    <img src="../../assets/icons/iconmonstr-mail-thin.svg" class="w-6 h-6 mr-3">
     <p>gtruong3000@gmail.com</p>
   </div>
 </div>
