--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
-<div class="pt-8 px-8 mb-8 md:mb-16 text-center">
-  <h1 class="text-6xl font-bold">Giao Truong</h1>
+<div class="pt-8 px-8 mb-8 md:mb-16">
+  <figure class="flex flex-col place-items-center pb-5">
+    <img src={{bio.avatar}} class="w-32 h-32 rounded-full">
+  </figure>
+  <h1 class="text-6xl text-center font-bold">Giao Truong</h1>
 </div>
